--- a/manager/aria2.css
+++ b/manager/aria2.css
@@ -142,6 +142,7 @@ body > div.session, body > div.file, body > div.uri,
 
 .file [title] {
     margin-top: 0px !important;
+    padding: 3px 10px;
 }
 
 .uri {
