--- a/manager/aria2.css
+++ b/manager/aria2.css
@@ -1,7 +1,7 @@
 body {
+    margin: 8px auto;
     height: 800;
     width: 1280px;
-    margin: 8px auto;
 }
 
 body > .session, body > .file, body > .uri,
@@ -66,7 +66,7 @@ body > .session, body > .file, body > .uri,
     margin-bottom: 5px;
     display: grid;
     grid-template-columns: repeat(3, calc(33.333% - 7.5px)) 22.5px;
-    grid-template-areas: "name name name menu" "detail detail detail menu" "detail detail detail menu" "meter meter meter meter" "options options options options";
+    grid-template-areas: "name name name menu" "details details details menu" "details details details menu" "meter meter meter meter" "options options options options";
 }
 
 .session > #name {
@@ -111,6 +111,10 @@ body > .session, body > .file, body > .uri,
 
 .session #save_btn {
     top: -12px;
+    display: none;
+}
+
+input:disabled + button {
     display: none;
 }
 
