--- a/manager/aria2.css
+++ b/manager/aria2.css
@@ -50,8 +50,14 @@ body > .session, body > .file, body > .uri,
     color: #fff;
 }
 
-#download_btn, #options_btn {
-    margin-left: auto;
+.stats {
+    display: inline-block;
+    padding: 6px;
+}
+
+span.stats {
+    margin-right: 10px;
+    padding-left: 3px;
 }
 
 #session {
@@ -112,6 +118,10 @@ body > .session, body > .file, body > .uri,
 .session #save_btn {
     top: -12px;
     display: none;
+}
+
+.session :not(.file) > [title] {
+    margin-top: 5px;
 }
 
 input:disabled + button {
