--- a/manager/main.css
+++ b/manager/main.css
@@ -154,8 +154,8 @@ input:disabled + button {
 
 #queue > :not(.complete, .removed, .error) #meter:active,
 #queue > :not(.complete, .removed, .error) #meter #ratio:active,
-.session.p2p .file > :nth-child(1):active,
-.session.http .uri > :nth-child(1):active {
+#queue > :not(.complete, .removed, .error) .p2p .file > :nth-child(1):active,
+#queue .http .uri > :nth-child(1):active {
     filter: contrast(45%);
 }
 
@@ -191,6 +191,6 @@ input:disabled + button {
     background-color: #c48;
 }
 
-.active, .waiting, .paused, .error, .complete, .removed {
+#active_btn, #waiting_btn, #stopped_btn, #meter, .download, .upload, .checked, .suspend {
     color: #fff;
 }
