--- a/manager/main.css
+++ b/manager/main.css
@@ -1,7 +1,53 @@
 body {
-    height: 800px;
+    display: grid;
+    grid-gap: 5px;
+    width: 680px;
+    margin: 8px;
+    grid-template-rows: 35px 493px 35px;
+}
+
+#menu, #tool {
+    margin-left: auto;
+}
+
+#queue {
+    grid-area: 2 / 1 / 3 / 5;
+    overflow-y: auto;
+    padding: 5px 0px;
+    border-width: 2px 0px;
+    border-style: solid;
+}
+
+#array {
+    grid-area: 1 / 1 / 1 / 4;
+}
+
+#speed {
+    grid-area: 3 / 1 / 4 / 4;
+}
+
+body.full {
     width: 1280px;
     margin: 8px auto;
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 500px) repeat(2, auto);
+}
+
+.full > #array {
+    grid-area: 1 / 1 / 1 / 2;
+}
+
+.full > #speed {
+    grid-area: 1 / 2 / 1 / 3;
+}
+
+.full > #menu {
+    grid-area: 1 / 3 / 1 / 4;
+}
+
+.full > #queue {
+    border-bottom-width: 0px;
+    padding-bottom: 0px;
 }
 
 body > .session, body > .file, body > .uri,
