--- a/manager/main.css
+++ b/manager/main.css
@@ -3,7 +3,7 @@ body {
     margin: 8px;
     display: grid;
     grid-gap: 5px;
-    grid-template-rows: 35px 495px 35px;
+    grid-template-rows: 33px 500px 33px;
 }
 
 #stats {
@@ -26,26 +26,26 @@ body {
     margin-left: auto;
 }
 
-.extend {
+.full {
     width: 1280px;
     margin: 8px auto;
-    grid-template-rows: repeat(2, auto);
-    grid-template-columns: repeat(2, 500px) repeat(2, auto);
+    grid-template-rows: 33px auto;
+    grid-template-columns: repeat(2, auto) repeat(2, max-content);
 }
 
-.extend > #stats {
+.full > #stats {
     grid-area: 1 / 1 / 1 / 2;
 }
 
-.extend > #speed {
+.full > #speed {
     grid-area: 1 / 2 / 1 / 3;
 }
 
-.extend > #menu {
+.full > #menu {
     grid-area: 1 / 3 / 1 / 4;
 }
 
-.extend > #queue {
+.full > #queue {
     border-bottom-width: 0px;
 }
 
