--- a/manager/main.css
+++ b/manager/main.css
@@ -12,10 +12,11 @@ body {
 
 #queue {
     grid-area: 2 / 1 / 3 / 5;
-    overflow-y: auto;
+    width: inherit;
     padding: 5px 0px;
     border-width: 2px 0px;
     border-style: solid;
+    overflow-y: auto;
 }
 
 #speed {
