--- a/manager/main.css
+++ b/manager/main.css
@@ -7,12 +7,11 @@ body {
 }
 
 #stat {
-    grid-area: 1 / 1 / 1 / 4;
+    grid-area: 1 / 1 / 1 / 3;
 }
 
 #queue {
-    grid-area: 2 / 1 / 3 / 5;
-    width: inherit;
+    grid-area: 2 / 1 / 3 / 4;
     padding: 5px 0px;
     border-width: 2px 0px;
     border-style: solid;
@@ -20,10 +19,11 @@ body {
 }
 
 #speed {
-    grid-area: 3 / 1 / 4 / 4;
+    grid-area: 3 / 1 / 4 / 3;
 }
 
 #menu, #tool {
+    display: inline-block;
     margin-left: auto;
 }
 
@@ -31,15 +31,12 @@ body {
     width: 1280px;
     margin: 8px auto;
     grid-template-rows: 33px auto;
-    grid-template-columns: repeat(2, 550px) repeat(2, max-content);
-}
-
-.full > #stat {
-    grid-area: 1 / 1 / 1 / 2;
+    grid-template-columns: minmax(400px, 500px) minmax(500px, 600px) minmax(300px, 400px);
 }
 
 .full > #speed {
     grid-area: 1 / 2 / 1 / 3;
+    margin: 0px auto;
 }
 
 .full > #menu {
