--- a/manager/main.css
+++ b/manager/main.css
@@ -1,3 +1,23 @@
+body {
+    width: 1280px;
+    margin: 8px auto;
+    grid-template-rows: 33px auto;
+    grid-template-columns: minmax(400px, 500px) minmax(500px, 600px) minmax(300px, 400px);
+}
+
+ #speed {
+    grid-area: 1 / 2 / 1 / 3;
+    margin: 0px auto;
+}
+
+#menu {
+    grid-area: 1 / 3 / 1 / 4;
+}
+
+#queue {
+    border-bottom-width: 0px;
+}
+
 #download::after, #upload::after {
     content: "B/s";
 }
@@ -28,12 +48,4 @@
 #second:not(:empty)::after {
     content: "s";
     vertical-align: sub;
-}
-
-#infinite {
-    display: none;
-}
-
-#day:empty + #hour:empty + #minute:empty + #second:empty + #infinite {
-    display: inline-block;
 }
