--- a/manager/main.css
+++ b/manager/main.css
@@ -1,21 +1,29 @@
 body {
     width: 1280px;
     margin: 8px auto;
-    grid-template-rows: 29px auto;
-    grid-template-columns: minmax(400px, 500px) minmax(500px, 600px) minmax(300px, 400px);
 }
 
- #speed {
-    grid-area: 1 / 2 / 1 / 3;
-    margin: 0px auto;
+#settings {
+    display: none;
+    position: absolute;
+    border-width: 1px;
+    border-style: solid;
+    top: 38px;
+    width: 50%;
+    padding: 8px;
+    z-index: 999999;
 }
 
-#menu {
-    grid-area: 1 / 3 / 1 / 4;
+.options > #settings {
+    display: block;
 }
 
-#queue {
-    border-bottom-width: 0px;
+.options #options_btn {
+    border-style: inset;
+}
+
+.options #options_btn:active {
+    border-style: outset;
 }
 
 #download::after, #upload::after {
@@ -49,15 +57,3 @@ body {
     content: "s";
     vertical-align: sub;
 }
-
-#settings {
-    display: none;
-    position: absolute;
-    border-width: 1px;
-    border-style: solid;
-    top: 45px;
-    width: 50%;
-    padding: 8px;
-    right: 0px;
-}
-
